Vagrant tweaks
1. refs #669